@@ -691,3 +691,4 @@ Migrated cPanel users with forwarding have email also delivered to their inbox, 
 Added a script installer for the Movable Type blogging platform.
 When an existing database is imported to a virtual server, the MySQL or PostgreSQL permissions to it are properly granted. Similarly, when a database is dis-associated, permissions to it and directory group permissions are properly removed.
 In the Server Templates section, separate template php.ini files can be specified for PHP versions 4 and 5.
+Added --alias, --toplevel, --subserver and --subdomain parameters to list-domains.pl to limit output.
